feat: 更新依赖以及规则

--- a/config/locale/en-US.json
+++ b/config/locale/en-US.json
@@ -590,5 +590,32 @@
   "禁止调用 Vue.nextTick 或 vm.$nextTick 时不使用 await": "Enforce valid `nextTick` function calls",
   "禁止将 any 类型的变量作为函数参数调用": "Disallows calling an function with an any type value",
   "联合类型和交叉类型的每一项必须按字母排序": "Enforces that members of a type union/intersection are sorted alphabetically",
-  "emits一定要有类型定义": "emits一定要有类型定义"
+  "emits一定要有类型定义": "emits一定要有类型定义",
+  "Lifecycle methods should be methods on the prototype, not class fields": "Lifecycle methods should be methods on the prototype, not class fields",
+  "Forbid attribute with an invalid values`": "Forbid attribute with an invalid values`",
+  "Enforce that namespaces are not used in React elements": "Enforce that namespaces are not used in React elements",
+  "Prevent declaring unused methods of component class": "Prevent declaring unused methods of component class",
+  "Prefer exact proptype definitions": "Prefer exact proptype definitions",
+  "disallow use other than available `lang`": "disallow use other than available `lang`",
+  "enforce component API style": "enforce component API style",
+  "require component names to be always multi-word": "require component names to be always multi-word",
+  "disallow accessing computed properties in `data`.": "disallow accessing computed properties in `data`.",
+  "disallow using deprecated `tag` property on `RouterLink` (in Vue.js 3.0.0+)": "disallow using deprecated `tag` property on `RouterLink` (in Vue.js 3.0.0+)",
+  "disallow deprecated `v-is` directive (in Vue.js 3.1.0+)": "disallow deprecated `v-is` directive (in Vue.js 3.1.0+)",
+  "disallow `export` in `<script setup>`": "disallow `export` in `<script setup>`",
+  "disallow specific classes in Vue components": "disallow specific classes in Vue components",
+  "disallow `this` usage in a `beforeRouteEnter` method": "disallow `this` usage in a `beforeRouteEnter` method",
+  "disallow undefined properties": "disallow undefined properties",
+  "disallow use computed property like method": "disallow use computed property like method",
+  "disallow useless attribute on `<template>`": "disallow useless attribute on `<template>`",
+  "disallow use of v-text": "disallow use of v-text",
+  "require declare public properties using `expose`": "require declare public properties using `expose`",
+  "prevent `<script setup>` variables used in `<template>` to be marked as unused": "prevent `<script setup>` variables used in `<template>` to be marked as unused",
+  "enforce valid `defineEmits` compiler macro": "enforce valid `defineEmits` compiler macro",
+  "enforce valid `defineProps` compiler macro": "enforce valid `defineProps` compiler macro",
+  "enforce valid `v-memo` directives": "enforce valid `v-memo` directives",
+  "一致的类型导出语法": "一致的类型导出语法",
+  "禁止 void 抛出空": "禁止 void 抛出空",
+  "禁止非空断言后面跟着双问号": "禁止非空断言后面跟着双问号",
+  "类的方法返回值是 this 时，类型必须设置为 this": "类的方法返回值是 this 时，类型必须设置为 this"
 }
